--- a/gems/gems.css
+++ b/gems/gems.css
@@ -2,25 +2,37 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .GEMS-achievement-frame {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    border-radius: 5px;
+    box-shadow: '4px 8px 36px #F4AAB9';
+    background-color: white;
+    width:600px;
+    height: 400px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .GEMS-achievement-title {
-    display: inline;
+    margin: 10px;
 }
 
 .GEMS-achievement-image {
     width: 100;
     height: 100;
-    border-radius: 1.5px;
+    border-radius: 5px;
     box-shadow: '4px 8px 36px #F4AAB9';
 }
 
 .GEMS-achievement-description {
-    margin: 60px;
+    margin: 10px;
 }
